--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul class="navbar">
                 <li><a href="/">home</a></li>
                 <li><a href="#about">about</a></li>
-                <li><a href="#projects">projects</a></li>
+                <li><a href="/projects/projects.html">projects</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
         </nav>
