--- a/index.html
+++ b/index.html
@@ -4,53 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
+
+<!-- Include the showdown library -->
+<script src="https://cdn.jsdelivr.net/npm/showdown@2.0.4/dist/showdown.min.js"></script>
+
 <body>
     <header>
         <nav>
             <ul class="navbar">
                 <li><a href="/">home</a></li>
                 <li><a href="#about">about</a></li>
-                <li><a href="/projects/projects.html">projects</a></li>
+                <li><a href="#projects">projects</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
         </nav>
     </header>
 
+
     <section id="home">
-        <h1>hey, I'm Jan 👋</h1>
-        <p>Hi, I'm Jan Bugel, a software developer.</p>
+        <h1>hey, I'm John 👋</h1>
+        <p>Hi, I'm John Doe, a software developer.</p>
     </section>
 
     <section id="about">
-        <h2>About Me</h2>
-        <p>I have several years of experience in web development and specialize in front-end technologies.
-        I mostly work with HTML, CSS, JavaScript, and PHP. I also have experience with Node.js and MySQL.
-        I create educational content for developers, teaching them about web development, JavaScript and TypeScript, 
-        React and Next.js, and more. This comes in all forms: blog posts, videos, tweets, conference talks, and workshops. You can watch some of my favorites below.
-        </p>
+        <!-- Include About Me content from about.md using JavaScript -->
+        <div id="aboutContent"></div>
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                fetch('/markdown/about.md')
+                    .then(response => response.text())
+                    .then(text => {
+                        document.getElementById('aboutContent').innerHTML = new showdown.Converter().makeHtml(text);
+                    });
+            });
+        </script>
     </section>
 
     <section id="projects">
-        <h2>My Projects</h2>
-        <div class="project">
-            <h3>Project 1</h3>
-            <p>Description of project 1.</p>
-        </div>
-        <div class="project">
-            <h3>Project 2</h3>
-            <p>Description of project 2.</p>
-        </div>
+        <!-- Include Projects content from projects.md using JavaScript -->
+        <div id="projectsContent"></div>
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                fetch('/markdown/projects.md')
+                    .then(response => response.text())
+                    .then(text => {
+                        document.getElementById('projectsContent').innerHTML = new showdown.Converter().makeHtml(text);
+                    });
+            });
+        </script>
     </section>
 
     <section id="contact">
-        <h2>Contact Me</h2>
-        <p>You can reach me at john@example.com</p>
+        <!-- Include Contact Me content from contact.md using JavaScript -->
+        <div id="contactContent"></div>
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                fetch('/markdown/contact.md')
+                    .then(response => response.text())
+                    .then(text => {
+                        document.getElementById('contactContent').innerHTML = new showdown.Converter().makeHtml(text);
+                    });
+            });
+        </script>
     </section>
 
     <footer>
         <p>&copy; 2022 John Doe</p>
     </footer>
+
+
 </body>
 </html>
