completed simple layout

--- a/projects.html
+++ b/projects.html
@@ -17,17 +17,17 @@
             </ul>
         </nav>
     </header>
-    
 
-    <section id="home">
-        <h1>hey, I'm John 👋</h1>
-        <p>Hi, I'm John Doe, a software developer.</p>
-    </section>
-
-
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>You can reach me at john@example.com</p>
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="project">
+            <h3>Project 1</h3>
+            <p>Description of project 1.</p>
+        </div>
+        <div class="project">
+            <h3>Project 2</h3>
+            <p>Description of project 2.</p>
+        </div>
     </section>
 
     <footer>
