--- a/education.html
+++ b/education.html
@@ -1,4 +1,4 @@
-<!-- contact.html -->
+<!-- education.html -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -14,8 +14,15 @@
     </header>
 
     <section>
-        <h2>Contact Me</h2>
-        <p>You can reach me at john@example.com</p>
+        <h2>education</h2>
+        <p>Sample Education:</p>
+        <ul>
+            <li>Bachelor of Science in Computer Science, XYZ University</li>
+            <li>Master of Business Administration, ABC University</li>
+            <li>Additional Education, University of Example</li>
+            <li>More Education, Example University</li>
+            <li>Even More Education, Another University</li>
+        </ul>
     </section>
 
     <footer>
@@ -26,3 +33,4 @@
     <script src="/assets/js/navbar.js"></script>
 </body>
 </html>
+
