--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,5 @@
+<!-- projects.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,14 +10,7 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="navbar">
-                <li><a href="/">home</a></li>
-                <li><a href="about.html">about</a></li>
-                <li><a href="projects.html">projects</a></li>
-                <li><a href="contact.html">contact</a></li>
-            </ul>
-        </nav>
+        <nav id="navbar-placeholder"></nav>
     </header>
 
     <section id="projects">
@@ -29,9 +24,13 @@
             <p>Description of project 2.</p>
         </div>
     </section>
-
+    
     <footer>
         <p>&copy; 2022 John Doe</p>
     </footer>
+
+    <!-- Include JavaScript to dynamically load the navbar -->
+    <script src="/assets/js/navbar.js"></script>
 </body>
 </html>
+
