--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,10 @@
 <!-- contact.html -->
 
+<!-- Include JavaScript to dynamically load the navbar and footer-->
+<script src="/assets/js/navbar.js"></script>
+<script src="/assets/js/footer.js"></script>
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,10 +24,8 @@
     </section>
 
     <footer>
-        <p>&copy; 2022 John Doe</p>
+        <nav id="footer-placeholder"></nav>
     </footer>
 
-    <!-- Include JavaScript to dynamically load the navbar -->
-    <script src="/assets/js/navbar.js"></script>
 </body>
 </html>
