--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         <p>Hi, I'm John Doe, a software developer.</p>
     </section>
 
+    <section>
+        <h2>About Me</h2>
+        <p>I have several years of experience in web development and specialize in front-end technologies.
+        I mostly work with HTML, CSS, JavaScript, and PHP. I also have experience with Node.js and MySQL.
+        I create educational content for developers, teaching them about web development, JavaScript and TypeScript, 
+        React and Next.js, and more. This comes in all forms: blog posts, videos, tweets, conference talks, and workshops. You can watch some of my favorites below.
+        </p>
+    </section>
+
     <footer>
         <nav id="footer-placeholder"></nav>
     </footer>
