--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <!-- Include JavaScript to dynamically load the navbar and footer-->
 <script src="/assets/js/navbar.js"></script>
 <script src="/assets/js/footer.js"></script>
+<script src="/assets/js/nightmodetoggle.js"></script>
 
 
 <!DOCTYPE html>
