--- a/education.html
+++ b/education.html
@@ -1,9 +1,10 @@
 <!-- education.html -->
 
-<!-- Include JavaScript to dynamically load the navbar and footer-->
+<!-- global -->
 <script src="/assets/js/navbar.js"></script>
 <script src="/assets/js/footer.js"></script>
-<script src="/assets/js/nightmodetoggle.js"></script>
+<script src="/assets/js/load-theme-switcher.js"></script>
+<script src="/assets/js/theme-switcher.js"></script>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/layout.css">
 </head>
 <body>
     <header>
