--- a/index.html
+++ b/index.html
@@ -13,8 +13,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
 
-    <!-- Include the layout.css stylesheet -->
-    <link id="layoutStylesheet" rel="stylesheet" href="/assets/css/layout.css">
+  <!-- Preload theme stylesheets -->
+  <link rel="preload" href="themes/1976.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/8008.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/9009.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/aurora.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/burgundy.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/carbon.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/dark.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/denim.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/dots.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/dracula.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/eclipse.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/godspeed.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/gruvbox.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/handarbeit.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/honeywell.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/hyperfuse.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/kobayashi.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/Leviathan.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/light.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/mizu.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/moderndolch.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/monokai.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/mrsleeves.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/nautilus.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/nord.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/oblivion.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/olivia.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/phantom.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/rama.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/sakura.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/serika.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/solarizeddark.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/solarizedlight.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/spacecadet.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/vilebloom.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="themes/yuri.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  
+  
+
+
+  <!-- Your existing stylesheets -->
+  <link id="layoutStylesheet" rel="stylesheet" href="/assets/css/layout.css">
 </head>
 <body>
     <header>
