--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
     <link id="layoutStylesheet" rel="stylesheet" href="/assets/css/layout.css">
 </head>
-<body>
+<body tabindex="0">
     <header>
         <nav id="navbar-placeholder"></nav>
     </header>
