--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Your existing stylesheets -->
   <link id="layoutStylesheet" rel="stylesheet" href="/assets/css/layout.css">
 </head>
-<body>
+<body tabindex="0">
     <header>
         <nav id="navbar-placeholder"></nav>
     </header>
