--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="/assets/js/navbar.js"></script>
+    <script src="/assets/js/footer.js"></script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>janbugel</title>
 
   <!-- Your existing stylesheets -->
   <link id="layoutStylesheet" rel="stylesheet" href="/assets/css/layout.css">
@@ -33,8 +36,5 @@
         <nav id="footer-placeholder"></nav>
     </footer>
 
-    <script src="assets/js/toggle.js"></script>
-    <script src="/assets/js/navbar.js"></script>
-    <script src="/assets/js/footer.js"></script>
 </body>
 </html>
