--- a/education.html
+++ b/education.html
@@ -5,6 +5,7 @@
 <head>
     <script src="/assets/js/navbar.js"></script>
     <script src="/assets/js/footer.js"></script>
+    <script src="/assets/js/color-picker.js"></script>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,17 +15,13 @@
 </head>
 <body tabindex="0">
     <header>
+        <nav id="navbar-placeholder"></nav>
         <nav>
             <ul class="navbar">
-                <li><a href="/">home</a></li>
-                <li><a href="work.html">work</a></li>
-                <li><a href="education.html">education</a></li>
-                <li><a href="contact.html">contact</a></li>
                 <li><a href="javascript:void(0);" id="colorPickerLabel" class="color-picker-label" onclick="openColorPicker()">
-                 <label for="colorPicker">themes</label>
+                 <label id="colorPickerLabel" for="colorPicker">themes</label>
             </a></li>
-            <input type="color" id="colorPicker" style="display: none;">
-        </nav>
+            <input type="color" id="colorPicker" style="display: none;"> 
     </header>
 
     <section>
