--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <script src="/assets/js/navbar.js"></script>
     <script src="/assets/js/footer.js"></script>
+    <script src="/assets/js/color-picker.js"></script>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,21 +14,17 @@
   <!-- Your existing stylesheets -->
   <link id="layoutStylesheet" rel="stylesheet" href="/assets/css/layout.css">
 </head>
-    <header>
-
-        <nav>
-            <ul class="navbar">
-                <li><a href="/">home</a></li>
-                <li><a href="work.html">work</a></li>
-                <li><a href="education.html">education</a></li>
-                <li><a href="contact.html">contact</a></li>
-                <li><a href="javascript:void(0);" id="colorPickerLabel" class="color-picker-label" onclick="openColorPicker()">
-                 <label for="colorPicker">themes</label>
-            </a></li>
-            <input type="color" id="colorPicker" style="display: none;">
-        </nav>
-        
-    </header>
+<header>
+    <nav id="navbar-placeholder"></nav>
+    <nav>
+        <ul class="navbar">
+            <li><a href="javascript:void(0);" id="colorPickerLabel" class="color-picker-label" onclick="openColorPicker()">
+             <label id="colorPickerLabel" for="colorPicker">themes</label>
+        </a></li>
+        <input type="color" id="colorPicker" style="display: none;"> 
+        </ul>
+    </nav>
+</header>
 
 
     <section>
