--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>janbugel</title>
+    <title>home</title>
 
-  <!-- Your existing stylesheets -->
   <link id="layoutStylesheet" rel="stylesheet" href="/assets/css/layout.css">
-</head>
-<header>
-    <nav id="navbar-placeholder"></nav>
-    <nav>
-        <ul class="navbar">
-            <li><a href="javascript:void(0);" id="colorPickerLabel" class="color-picker-label" onclick="openColorPicker()">
-             <label id="colorPickerLabel" for="colorPicker">themes</label>
-        </a></li>
-        <input type="color" id="colorPicker" style="display: none;"> 
-        </ul>
-    </nav>
-</header>
+</head tabindex="0">
+    <header>
+        <nav id="navbar-placeholder"></nav>
+        <nav>
+            <ul class="navbar">
+                <li>
+                    <a href="javascript:void(0);" id="colorPickerLabel" class="color-picker-label" onclick="openColorPicker()">
+                        <label id="colorPickerLabel" for="colorPicker">themes</label>
+                    </a>
+                </li>
+                <input type="color" id="colorPicker" style="display: none;"> 
+            </ul>
+        </nav>
+    </header>
 
 
     <section>
