--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>work</title>
 
    <link id="layoutStylesheet" rel="stylesheet" href="/assets/css/layout.css">
 </head>
@@ -18,10 +18,14 @@
         <nav id="navbar-placeholder"></nav>
         <nav>
             <ul class="navbar">
-                <li><a href="javascript:void(0);" id="colorPickerLabel" class="color-picker-label" onclick="openColorPicker()">
-                 <label id="colorPickerLabel" for="colorPicker">themes</label>
-            </a></li>
-            <input type="color" id="colorPicker" style="display: none;"> 
+                <li>
+                    <a href="javascript:void(0);" id="colorPickerLabel" class="color-picker-label" onclick="openColorPicker()">
+                        <label id="colorPickerLabel" for="colorPicker">themes</label>
+                    </a>
+                </li>
+                <input type="color" id="colorPicker" style="display: none;"> 
+            </ul>
+        </nav>
     </header>
 
     <section id="projects">
