--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
     <script src="/assets/js/color-picker.js"></script>
     
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>work</title>
 
     <link id="layoutStylesheet" rel="stylesheet" href="/assets/css/layout.css">
