code formatted with prettier

--- a/testing/index.html
+++ b/testing/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Mode Toggle</title>
-    <link id="layoutStylesheet" rel="stylesheet" href="styles.css">
-</head>
-<body>
-<header>
-    <ul class="navbar">
+    <link id="layoutStylesheet" rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <ul class="navbar">
         <div class="dropdown">
-            <button class="dropbtn">Color Mode</button>
-            <div class="dropdown-content" id="colorModeDropdown"></div>
+          <button class="dropbtn">Color Mode</button>
+          <div class="dropdown-content" id="colorModeDropdown"></div>
         </div>
-    </ul>
-</header>
+      </ul>
+    </header>
 
-<script src="toggle.js"></script>
-</body>
+    <script src="toggle.js"></script>
+  </body>
 </html>
