--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section>
       <h1>hey, I'm John 👋</h1>
-      <p>Hi, I'm John Doe, a software developer.</p>
+      <p>Hi, I'm John Doe, a fullstack developer.</p>
       <br /><br />
 
       <h2>About Me</h2>
