--- a/index.html
+++ b/index.html
@@ -1,50 +1,57 @@
-<!-- index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="/assets/js/navbar.js"></script>
-    <script src="/assets/js/footer.js"></script>
-    <script src="/assets/js/color-picker.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />
+  <title>home</title>
+  <link id="layoutStylesheet" rel="stylesheet" href="/assets/css/layout.css" />
+</head>
+<body tabindex="0">
+  <header id="header">
+    <nav id="navbar-placeholder"></nav>
+  </header>
 
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"
-    />
-    <title>home</title>
+  <section>
+    <h1>hey, I'm John 👋</h1>
+    <p>Hi, I'm John Doe, a fullstack developer.</p>
+    <br /><br />
 
-    <link
-      id="layoutStylesheet"
-      rel="stylesheet"
-      href="/assets/css/layout.css"
-    />
-  </head>
-
-  <body tabindex="0">
-    <header id="header">
-      <nav id="navbar-placeholder"></nav>
-    </header>
-
-    <section>
-      <h1>hey, I'm John 👋</h1>
-      <p>Hi, I'm John Doe, a fullstack developer.</p>
+    <h2>About Me</h2>
+    <p>
+      I have several years of experience in web development and specialize in
+      front-end technologies. I mostly work with HTML, CSS, JavaScript, and
+      PHP. I also have experience with Node.js and MySQL. I create educational
+      content for developers, teaching them about web development, JavaScript
+      and TypeScript, React and Next.js, and more. This comes in all forms:
+      blog posts, videos, tweets, conference talks, and workshops. You can
+      watch some of my favorites below.
+    </p>
+    <br /><br />
+    <div>
+      <p><b>This example demonstrates how to hide a navbar when the user starts to scroll the page.</b></p>
       <br /><br />
+      <p>Scroll down this frame to see the effect!</p>
+      <p>Scroll up to show the navbar.</p>
+      <p>Lorem ipsum dolor dummy text sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Lorem ipsum dolor dummy text sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id e
+      <p>Lorem ipsum dolor dummy text sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <br /><br />
+      <p>Lorem ipsum dolor dummy text sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id e
+      <p>Lorem ipsum dolor dummy text sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <br /><br />
+      <p>Lorem ipsum dolor dummy text sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id e
+      <p>Lorem ipsum dolor dummy text sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Lorem ipsum dolor dummy text sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id e
+                  
+  </section>
 
-      <h2>About Me</h2>
-      <p>
-        I have several years of experience in web development and specialize in
-        front-end technologies. I mostly work with HTML, CSS, JavaScript, and
-        PHP. I also have experience with Node.js and MySQL. I create educational
-        content for developers, teaching them about web development, JavaScript
-        and TypeScript, React and Next.js, and more. This comes in all forms:
-        blog posts, videos, tweets, conference talks, and workshops. You can
-        watch some of my favorites below.
-      </p>
-    </section>
+  <footer>
+    <nav id="footer-placeholder"></nav>
+  </footer>
 
-    <footer>
-      <nav id="footer-placeholder"></nav>
-    </footer>
-  </body>
+  <script src="/assets/js/navbar.js"></script>
+  <script src="/assets/js/footer.js"></script>
+  <script src="/assets/js/color-picker.js"></script>
+  <script src="/assets/js/scrolling-topbar.js"></script>
+</body>
 </html>
