--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="/assets/js/navbar.js"></script>
+  <script src="/assets/js/footer.js"></script>
+  <script src="/assets/js/color-picker.js"></script>
+  <script src="/assets/js/scrolling-topbar.js"></script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />
   <title>home</title>
@@ -11,7 +16,7 @@
     <nav id="navbar-placeholder"></nav>
   </header>
 
-  <section>
+  <section id="maincontent">
     <h1>hey, I'm John 👋</h1>
     <p>Hi, I'm John Doe, a fullstack developer.</p>
     <br /><br />
@@ -49,9 +54,5 @@
     <nav id="footer-placeholder"></nav>
   </footer>
 
-  <script src="/assets/js/navbar.js"></script>
-  <script src="/assets/js/footer.js"></script>
-  <script src="/assets/js/color-picker.js"></script>
-  <script src="/assets/js/scrolling-topbar.js"></script>
 </body>
 </html>
