--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <script src="/assets/js/navbar.js"></script>
     <script src="/assets/js/footer.js"></script>
     <script src="/assets/js/color-picker.js"></script>
+    <script src="/assets/js/scrolling-topbar.js"></script>
 
     <meta charset="UTF-8" />
     <meta
